<resources>
    <string name="app_name">GitHub-user2</string>
    <string name="html_url">Html_Url</string>
    <string name="username">Username</string>
    <string name="hint">Input Username</string>
    <string name="repo">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="change_language_setting">Change Language Setting</string>
</resources>